--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 </footer>
 
 <script src="http://connect.soundcloud.com/sdk.js"></script>
-<script src="js/app.js"></script>
+<script src="js/p5.js"></script>
+  <script src="js/p5.sound.js"></script> 
+  <script src="js/sketch.js"></script>
 </body>
 </html>
